# bOoM

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TiledArray.hpp  TiledArray.tpp  allocator.hpp  basemath.cpp  basemath.hpp  blob.hpp  color.hpp  dynamic.hpp  intersection.cpp  intersection.hpp  main.cpp  mainpage.rst  math2d.cpp  math2d.hpp  shape.hpp
include/bOoM/: TiledArray.hpp  aabr.hpp  circle.hpp  color.hpp  fields.hpp  intersection.hpp  math2d.hpp
include/bOoM/entities/common/: graphic.hpp
include/bOoM/entities/solid/: Solid.hpp
src/: CMakeLists.txt  mainpage.md  messages.md  rotations.hpp
src/bOoM/: BitsetAllocator.hpp  CMakeLists.txt  Entity.hpp  FlatArray.hpp  FlatArray.tpp  GenericEntity.hpp  Image.hpp  ImageEntity.hpp  TODOs  TiledArray.hpp  TiledArray.tpp  World.hpp  aabr.cpp  aabr.hpp  allocator.hpp  base.hpp  basemath.cpp  basemath.hpp  cfg.hpp  circle.hpp  collision.hpp  color.cpp  color.hpp  colorf.hpp  control.hpp  fields.hpp  intersection.cpp  intersection.hpp  math2d.cpp  math2d.hpp  mechanic.hpp
src/bOoM/components/: graphic.cpp  graphic.hpp
src/bOoM/dispatcher/: Dispatcher.hpp  dispatcher.hpp
src/bOoM/entities/: Entity.cpp  Entity.hpp  entity.hpp  message_type.hpp
src/bOoM/entities/balloon/: Balloon.cpp  Balloon.hpp  graphic.cpp  graphic.hpp
src/bOoM/entities/common/: ImageEntity.hpp  Type.cpp  control.hpp  graphic.cpp  graphic.hpp  graphic.tpp  magic.hpp  mechanic.hpp  message_names.hpp  spell_cast.hpp
src/bOoM/entities/solid/: Solid.cpp  Solid.hpp  collision.hpp  mechanic.hpp
src/bOoM/entities/template/: data.cpp  data.hpp  graphic.cpp
src/bOoM/entities/world_boundary/: WorldBoundary.cpp  WorldBoundary.hpp
src/bOoM/stdBoOm/: Image.cpp  TiledArray.tpp  aabr.cpp  basemath.cpp  color.cpp  intersection.cpp  math2d.cpp  math2d.hpp
src/bOoMengine/: CMakeLists.txt  SDLDisplayer.cpp  SDLDisplayer.hpp  SDLWindowDisplayer.cpp  SDLWindowDisplayer.hpp  SimpleDisplayer.hpp  Simulator.cpp  Simulator.hpp  array_curry.hpp  eventual_bool.hpp
src/test/: CMakeLists.txt  bOoM_test.cpp  bOoMengine_test.cpp  main.cpp  old_stdout_test.cpp  sandbox.cpp  test.cpp  test__BitsetAllocator.cpp  test__BitsetAllocator.hpp  test__GenericEntity.hpp  test__Simulator.cpp  test__TiledArray.cpp  test__TiledArray.hpp  test__color.cpp  test__color.hpp  test__math2d.cpp  test__math2d.hpp  test__shapes.cpp  test__shapes.hpp  test_macros.hpp
src/visualizer/: CMakeLists.txt  CompileTimeDisplayer.cpp  CompileTimeDisplayer.hpp  SimpleDisplayActor.cpp  SimpleDisplayActor.hpp  SimpleDisplayObject.cpp  SimpleDisplayObject.hpp  SimpleDisplayer.cpp  SimpleDisplayer.hpp  SimpleInputActor.cpp  SimpleInputActor.hpp  display.cpp  display.hpp  main.cpp
